added auth instructions

--- a/success/index.html
+++ b/success/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.CbChrIfS.css"
+      href="/assets/static/app_generated_index-6937cd5a.DWnafi8u.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -53,7 +53,15 @@
       </div>
       <div class="w-text w-text-12">Payment Successful 🎉</div>
       <div class="w-text w-text-13">
-        Credentials to access mSocial platform has been shared to your email 👍
+        Here are the credentials to Log-in into mSocial Platform 👍<br /><br /><b
+          class="w-bold-text"
+          >URL:</b
+        >
+        https://portal.msocialverse.com/<br /><b class="w-bold-text"
+          >Username:</b
+        >
+        {Use your email}<br /><b class="w-bold-text">Password:</b>
+        @msocial<br />
       </div>
       <a
         href="https://portal.msocialverse.com/"
@@ -91,13 +99,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.Dw3Zy0_O.js"
+      src="/assets/entries/entry-server-routing.DII8L4iH.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_success.Bw7NlRkb.js"
+      href="/assets/entries/pages_success.p9TmFTVi.js"
       as="script"
       type="text/javascript"
     /><link
