success page update after portal email fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.DWnafi8u.css"
+      href="/assets/static/app_generated_index-6937cd5a.BaTVePc4.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -449,13 +449,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.DII8L4iH.js"
+      src="/assets/entries/entry-server-routing.Bf-pgAO9.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_index.C131EZVf.js"
+      href="/assets/entries/pages_index.206xKoXH.js"
       as="script"
       type="text/javascript"
     />
