--- a/success/index.html
+++ b/success/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/assets/static/app_generated_index-6937cd5a.DWnafi8u.css"
+      href="/assets/static/app_generated_index-6937cd5a.BaTVePc4.css"
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -53,15 +53,11 @@
       </div>
       <div class="w-text w-text-12">Payment Successful 🎉</div>
       <div class="w-text w-text-13">
-        Here are the credentials to Log-in into mSocial Platform 👍<br /><br /><b
-          class="w-bold-text"
-          >URL:</b
-        >
-        https://portal.msocialverse.com/<br /><b class="w-bold-text"
-          >Username:</b
-        >
-        {Use your email}<br /><b class="w-bold-text">Password:</b>
-        @msocial<br />
+        ✨Credentials to Login into mSocial Platform has been sent to your email
+        📩
+      </div>
+      <div class="w-text w-text-19">
+        *If email is not found, do cross check in spam category too. Thank you.
       </div>
       <a
         href="https://portal.msocialverse.com/"
@@ -99,13 +95,13 @@
       }
     </script>
     <script
-      src="/assets/entries/entry-server-routing.DII8L4iH.js"
+      src="/assets/entries/entry-server-routing.Bf-pgAO9.js"
       type="module"
       async
     ></script>
     <link
       rel="modulepreload"
-      href="/assets/entries/pages_success.p9TmFTVi.js"
+      href="/assets/entries/pages_success.jwWVTtfc.js"
       as="script"
       type="text/javascript"
     /><link
